@@ -1,1 +1,3 @@
 # PRA_TPs
+
+--module-path C:\Users\dell\javafx-sdk-23.0.2\lib --add-modules=javafx.controls,javafx.fxml
